# arnold

./: .gitignore  README.md  build_env.sh  pyproject.toml  setup.py
examples/mnist/: README.md  mnist.ipynb
examples/multivariate_interpolation/: README.md  fractal.ipynb  helmholtz.ipynb
examples/two_moons/: README.md  two_moons.ipynb
src/arnold/layers/: __init__.py
src/arnold/layers/convolutional/: __init__.py  conv_base.py
src/arnold/layers/core/: __init__.py  kan_base.py  radial_basis_functions.py  rational_functions.py  wavelets.py
src/arnold/layers/core/polynomial/: __init__.py  boubaker.py  laurent.py  n_bonacci.py  non_orthogonal.py  orthogonal.py  poly_base.py  w_polynomials.py
src/arnold/layers/core/radial/: __init__.py  gaussian.py  inverse_multiquadric.py  inverse_quadratic.py  rbf_base.py
src/arnold/layers/core/wavelet/: __init__.py  bump.py  dog.py  meyer.py  morelet.py  poisson.py  ricker.py  shannon.py  wavelet_base.py
src/arnold/layers/polynomial/: boubaker.py  laurent.py  poly_base.py
src/arnold/layers/polynomial/fibonacci/: fibonacci.py  heptanacci.py  hexanacci.py  octanacci.py  pentanacci.py  tetranacci.py
src/arnold/layers/polynomial/orthogonal/: __init__.py  (+13 more)
src/arnold/layers/radial/: __init__.py  gaussian.py  gaussian_rbf.py  inverse_multiquadric.py  inverse_multiquadric_rbf.py  inverse_quadratic.py  inverse_quadratic_rbf.py  rbf_base.py
src/arnold/layers/wavelet/: __init__.py  bump.py  dog.py  meyer.py  morelet.py  poisson.py  ricker.py  shannon.py  wavelet_base.py
src/arnold/math/: __init__.py  hypergeometric.py
(+52 files in other folders)
